wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
 name: wordpress
 labels:
   app: wordpress
spec:
 type: LoadBalancer
 ports:
   - port: 80
     protocol: TCP
     targetPort: 80
 selector:
   app: wordpress
   tier: frontend
